2008-12-16  David Teller  <David.Teller@univ-orleans.fr>

	* src/main/threads/batteries.ml: Dlllist, Dynarray, MultiPMap, Base64 added

	* src/main/nothreads/batteries.ml: Dlllist, Dynarray, MultiPMap, Base64 added

2008-12-15  David Teller  <David.Teller@univ-orleans.fr>

	* src/main/threads/batteries.mllib: Batlib_Baselib_Thread, Batlib_Baselib_Mutex, Batlib_Baselib_Condition, Batlib_Baselib_Event, Batlib_Baselib_StringLabels, Batlib_Baselib_Set 	removed

	* src/core/extlib/extHashtbl.mli: removed [include] from documentation

	* src/core/extlib/enum.mli: removed [include] from documentation

2008-12-14  David Teller  <David.Teller@univ-orleans.fr>

	* src/core/extlib/enum.mli: ExceptionLess documentation modified

2008-12-08  David Teller  <David.Teller@univ-orleans.fr>

	* src/core/extlib/extPervasives.ml*: [undefined] added

2008-12-06  David Teller  <David.Teller@univ-orleans.fr>

	* examples/unicode.ml: [rope1] now defined from [u1] rather than [s1]

	* examples/unicode.ml: flattened

	* examples/shuffle2.ml: flattened

	* src/main/threads/batteries.ml: [Random] is now [Extlib.ExtRandom.Random]

	* src/main/nothreads/batteries.ml: [Random] is now [Extlib.ExtRandom.Random]

	* examples/parallelsort.ml: flattened

	* examples/netchan-cat.ml: flattened

	* src/main/nothreads/batteries.ml: [Netchannels] added

	* examples/gzip.ml: flattened

	* examples/gunzip.ml: flattened

	* examples/cat.ml: flattened

	* examples/accumulator.ml: flattened

	* src/core/extlib/pSet.ml:  [PA_TYPE_CONV] flattened

	* src/core/extlib/pSet.ml:  [exists] now uses [Return] instead of [Label]

	* src/core/extlib/extString.ml: [PA_TYPE_CONV] flattened

	* src/core/extlib/extString.ml*: in [Cap.t], removed constraints
	

2008-11-30  David Teller  <David.Teller@univ-orleans.fr>

	* src/core/extlib/extString.ml*: [repeat] added

2008-11-25  David Teller  <David.Teller@univ-orleans.fr>

	* build/odoc_tags.ml: created

	* src/main/threads/batteries.ml: rewritten
	